css/styles.css
body{
  background-image: url("../images/lebronxbronnyjames.jpg");
  background-size: cover;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

html{
  font-family: "Lilita One", "Playfair Display", sans-serif;
  line-height: 1.2em;
}
label{
  display: block;
}
h1{
  font-size: 36px;
  font-weight: bold;
  color: #552582;
  margin-bottom: 25px;
}
p{
  font-size: 16px;
  color: #FDB927;
  margin-bottom: 20px;
}
li{
  font-size: 20px;
  color: #552582;
  margin-bottom: 10px;
}
#content{
  width: 90%;
  background-color: rgba(255,255,255,0.8);
  border-radius: 8px;
  box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
  padding: 20px;
}

input[type="text"]{
  background-color: #9104f1;
  width: 90%;
  border: none;
  border-radius: 4px;
  padding: 12px;
  color: #FFFFFF;
  font-size:10px;
  box-sizing:border-box;
}
input[type="email"]{
  background-color: #9104f1;
  color: #FFFFFF;
  width: 90%;
  border: none;
  border-radius: 4px;
  padding: 12px;
}
input[type="tel"]{
  background-color: #9104f1;
  color: #FFFFFF;
  width: 90%;
  padding: 12px;
  border: none;
  border-radius: 6px;
  cursor: pointer;
  font-size: 14px;
}
input[type="submit"]:hover {
  background-color: #ebc62d;
}

  

